--- a/Hobby1/appsettings.json
+++ b/Hobby1/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5432;Database=SiteHobby1DB;Username=postgres;Password=1122331;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
